# bluetooth-util-lib

./: .gitignore  CMakeLists.txt  CODING_STYLE.md  Doxyfile  README.md  README_8md.html  TODO.md  adapter_8h.html  adapter_8h__dep__incl.dot  adapter_8h__dep__incl.map  adapter_8h__dep__incl.md5  adapter_8h__incl.dot  adapter_8h__incl.map  adapter_8h__incl.md5  adapter_8h_source.html  advertisement_8cpp.html  advertisement_8cpp__incl.dot  advertisement_8cpp__incl.map  advertisement_8cpp__incl.md5  advertisement_8cpp_source.html  advertisement_8h.html  advertisement_8h__dep__incl.dot  advertisement_8h__dep__incl.map  advertisement_8h__dep__incl.md5  advertisement_8h__incl.dot  advertisement_8h__incl.map  advertisement_8h__incl.md5  advertisement_8h_source.html  annotated.html  annotated_dup.js  application_8cpp.html  application_8cpp__incl.dot  application_8cpp__incl.map  application_8cpp__incl.md5  application_8cpp_source.html  application_8h.html  application_8h__dep__incl.dot  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.dot  (+205 more)
.github/workflows/: doxygen-gh-pages.yml
ble/: CMakeLists.txt  main.cpp  peripheral.cpp  peripheral.h  tests.h
ble/common/: advertisement.cpp  advertisement.h  application.cpp  application.h  characteristic.cpp  characteristic.h  declarations.h  service.cpp  service.h  types.h
ble/include/ble/: advertisement.h  application.h  central.h  characteristic.h  declarations.h  peripheral.h  service.h
ble/src/: advertisement.cpp  application.cpp  central.cpp  characteristic.cpp  service.cpp
ble/test/: tests.h
bluetooth/: CMakeLists.txt  bluetooth_device.h  bluetooth_device.hpp  bluetooth_functions.cpp  bluetooth_functions.h  bluetooth_functions.hpp  main.cpp  tests.h
bluetooth/include/bluetooth/: device.h  file_transfer.h  functions.h
bluetooth/src/: file_transfer.cpp
bluetooth/test/: tests.h
common/: adapter.h  declarations.h
search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_7.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  namespaces_0.js  (+4 more)
